authelia/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.$SERVICES_DOMAIN`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: example-org-tls
