authelia/nfs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-nfs
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia-nfs
  template:
    metadata:
      labels:
        app: authelia-nfs
    spec:
      containers:
        - name: nfs-server
          image: ghcr.io/trexx/docker-nfs-server:latest
          imagePullPolicy: Always
          ports:
            - name: nfsv4
              containerPort: 2049
              protocol: TCP
          securityContext:
            privileged: true
            capabilities:
              add:
                - "SYS_ADMIN"
          volumeMounts:
            - mountPath: /data
              name: authelia-nfs-data
              readOnly: false
            - name: nfs-exports
              mountPath: /var/lib/nfs/etab
              subPath: etab
              readOnly: true
      volumes:
        - name: modules
          hostPath:
            path: /lib/modules
        - name: nfs-exports
          configMap:
            name: authelia-nfs-cm
        - name: authelia-nfs-data
          persistentVolumeClaim:
            claimName: authelia-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-nfs
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 2049
  selector:
    app: authelia-nfs
  clusterIP: 10.96.172.221
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authelia-nfs
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: authelia-nfs
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: authelia
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: authelia
